--- a/main.html
+++ b/main.html
@@ -99,7 +99,7 @@
           </div>
         </div>
 
-        <div class="row justify-content-center">
+        <div class="row justify-content-center align-items-center">
           <ul class="nav nav-tabs justify-content-center d-flex flex-column flex-md-row gap-4 text-center" id="featuresTab" role="tablist">
             <li class="nav-item me-3" role="presentation">
               <a class="nav-link active" id="bookmarking-tab" data-bs-toggle="tab" href="#bookmarking" role="tab" aria-controls="bookmarking" aria-selected="true">Simple Bookmarking</a>
